--- a/timer/pubspec.yaml
+++ b/timer/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  web_socket_channel: 2.4.0
 
 dev_dependencies:
   lints: ^2.0.0
