--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -6,6 +6,9 @@ click==8.1.7
 flask==3.0.0
 Flask-Cors==4.0.0
 Flask-SocketIO==5.3.6
+gevent==23.9.1
+gevent-websocket==0.10.1
+greenlet==3.0.1
 h11==0.14.0
 idna==3.6
 importlib-metadata==6.9.0
@@ -21,3 +24,5 @@ websocket-client==1.6.4
 werkzeug==3.0.1
 wsproto==1.2.0
 zipp==3.17.0
+zope.event==5.0
+zope.interface==6.1
