--- a/timer/analysis_options.yaml
+++ b/timer/analysis_options.yaml
@@ -1,30 +1,53 @@
-# This file configures the static analysis results for your project (errors,
-# warnings, and lints).
-#
-# This enables the 'recommended' set of lints from `package:lints`.
-# This set helps identify many issues that may lead to problems when running
-# or consuming Dart code, and enforces writing Dart using a single, idiomatic
-# style and format.
-#
-# If you want a smaller set of lints you can change this to specify
-# 'package:lints/core.yaml'. These are just the most critical lints
-# (the recommended set includes the core lints).
-# The core lints are also what is used by pub.dev for scoring packages.
+# Link with all lints
+# https://dart-lang.github.io/linter/lints/
 
-include: package:lints/recommended.yaml
+# Recommended lints
+include: package:flutter_lints/flutter.yaml
 
-# Uncomment the following section to specify additional rules.
-
-# linter:
-#   rules:
-#     - camel_case_types
-
-# analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
-
-# For more information about the core and recommended set of lints, see
-# https://dart.dev/go/core-lints
-
-# For additional information about configuring this file, see
-# https://dart.dev/guides/language/analysis-options
+# Project lints
+analyzer:
+  errors:
+    avoid_void_async: error
+    annotate_overrides: warning
+    cancel_subscriptions: error
+    constant_identifier_names: error
+    file_names: error
+    invalid_use_of_visible_for_testing_member: error
+    missing_return: error
+    must_call_super: error
+    invalid_override_of_non_virtual_member: error
+    invalid_use_of_protected_member: error
+    instance_access_to_static_member: warning
+  exclude:
+    - test/mock.mocks.dart
+    - lib/generated_plugin_registrant.dart
+    - lib/**.g.dart
+    - lib/**.freezed.dart
+linter:
+  rules:
+    always_declare_return_types: true
+    always_use_package_imports: true
+    avoid_field_initializers_in_const_classes: true
+    avoid_function_literals_in_foreach_calls: false
+    avoid_slow_async_io: true
+    avoid_type_to_string: true
+    avoid_unused_constructor_parameters: true
+    avoid_void_async: true
+    cancel_subscriptions: true
+    cast_nullable_to_non_nullable: true
+    close_sinks: true
+    constant_identifier_names: false
+    no_adjacent_strings_in_list: true
+    prefer_asserts_in_initializer_lists: true
+    prefer_final_in_for_each: true
+    prefer_final_locals: true
+    require_trailing_commas: true
+    test_types_in_equals: true
+    throw_in_finally: true
+    unnecessary_await_in_return: true
+    unnecessary_null_checks: true
+    unnecessary_parenthesis: true
+    unnecessary_statements: true
+    use_is_even_rather_than_modulo: true
+    use_raw_strings: true
+    use_string_buffers: true
