--- a/timer_ui/analysis_options.yaml
+++ b/timer_ui/analysis_options.yaml
@@ -1,28 +1,53 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
+# Link with all lints
+# https://dart-lang.github.io/linter/lints/
 
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
+# Recommended lints
 include: package:flutter_lints/flutter.yaml
 
+# Project lints
+analyzer:
+  errors:
+    avoid_void_async: error
+    annotate_overrides: warning
+    cancel_subscriptions: error
+    constant_identifier_names: error
+    file_names: error
+    invalid_use_of_visible_for_testing_member: error
+    missing_return: error
+    must_call_super: error
+    invalid_override_of_non_virtual_member: error
+    invalid_use_of_protected_member: error
+    instance_access_to_static_member: warning
+  exclude:
+    - test/mock.mocks.dart
+    - lib/generated_plugin_registrant.dart
+    - lib/**.g.dart
+    - lib/**.freezed.dart
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-  # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-  # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    always_declare_return_types: true
+    always_use_package_imports: true
+    avoid_field_initializers_in_const_classes: true
+    avoid_function_literals_in_foreach_calls: false
+    avoid_slow_async_io: true
+    avoid_type_to_string: true
+    avoid_unused_constructor_parameters: true
+    avoid_void_async: true
+    cancel_subscriptions: true
+    cast_nullable_to_non_nullable: true
+    close_sinks: true
+    constant_identifier_names: false
+    no_adjacent_strings_in_list: true
+    prefer_asserts_in_initializer_lists: true
+    prefer_final_in_for_each: true
+    prefer_final_locals: true
+    require_trailing_commas: true
+    test_types_in_equals: true
+    throw_in_finally: true
+    unnecessary_await_in_return: true
+    unnecessary_null_checks: true
+    unnecessary_parenthesis: true
+    unnecessary_statements: true
+    use_is_even_rather_than_modulo: true
+    use_raw_strings: true
+    use_string_buffers: true
