--- a/timer_ui/pubspec.yaml
+++ b/timer_ui/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   bloc_pattern: 3.0.1
-  web_socket_channel: 2.4.0
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
