--- a/timer/pubspec.yaml
+++ b/timer/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  web_socket_channel: 2.4.0
+  socket_io_client: 2.0.3+1
 
 dev_dependencies:
   lints: ^2.0.0
