small update of timer module

--- a/timer/pubspec.yaml
+++ b/timer/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  socket_io_client: 2.0.3+1
-  dart_ping: 9.0.1
+  socket_io_client: ^2.0.3+1
+  http: any
 
 dev_dependencies:
   lints: ^2.0.0
