added timer ui to docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,9 @@ services:
   timer:
     container_name: timer
     build: timer
+
+  timer-ui:
+    container_name: timer-ui
+    build: timer-ui
+    ports:
+      - "8080:80"
